--- a/web/application/admin/view/goods/create.html
+++ b/web/application/admin/view/goods/create.html
@@ -118,7 +118,7 @@
                                     <label  class="col-md-2">售价</label>
                                     <div class="col-md-5 no-padding">
                                         <div class="row">
-                                            <input type="text"  min="0" name="w_price" class="form-control col-md-4" />
+                                            <input type="text"  min="0" name="w_price" value="0.00" class="form-control col-md-4" />
                                         </div>
                                     </div>
                                 </div>
@@ -126,7 +126,7 @@
                                     <label class="col-md-2">成本价</label>
                                     <div class="col-md-5 no-padding">
                                         <div class="row">
-                                            <input type="text"  min="0"  name="cost_price" class="form-control col-md-4" />
+                                            <input type="text"  min="0"  name="cost_price"  value="0.00" class="form-control col-md-4" />
                                         </div>
                                     </div>
                                 </div>
