--- a/web/application/admin/view/goods/view.html
+++ b/web/application/admin/view/goods/view.html
@@ -48,28 +48,28 @@
                         </div>
                         <div class="card-body">
                             <div class="form-inline form-group">
-                                <label for="" class="col-md-3">商品名称</label>
+                                <label for="" class="col-md-2">商品名称</label>
                                 <span class="">{$goods.title}</span>
                             </div>
                             <div class="form-inline form-group">
-                                <label for="" class="col-md-3 pull-right">所属商城分类</label>
+                                <label for="" class="col-md-2">所属商城分类</label>
                                 <span class="">{$goods.goodsTypeName}</span>
                             </div>
                             <div class="form-inline form-group">
-                                <label for="" class="col-md-3">商品供应商</label>
+                                <label for="" class="col-md-2">商品供应商</label>
                                 <span class="">{$goods.supplierName}</span>
                             </div>
                             <div class="form-inline form-group">
-                                <label for="" class="col-md-3">商品计量单位</label>
+                                <label for="" class="col-md-2">商品计量单位</label>
                                 <span class="">{$goods.unitName}</span>
                             </div>
 
                             <div class="form-inline form-group">
-                                <label for="" class="col-md-3">封面图片</label>
+                                <label for="" class="col-md-2">封面图片</label>
                                 <a href="{$goods.icon}" target="_blank"><img src="{$goods.icon}"  width="150px" height="150px" /></a>
                             </div>
                             <div class="form-inline form-group">
-                                <label for="" class="col-md-3">多视角图片</label>
+                                <label for="" class="col-md-2">多视角图片</label>
                                 <div class="col-md-8">
                                     <div class="row">
                                         {foreach name="$goods.multiImg" id="imgpath"}
@@ -82,7 +82,7 @@
                             </div>
                             {if $rows}
                             <div class="form-inline form-group">
-                                <label for="" class="col-md-3">规格</label>
+                                <label for="" class="col-md-2">规格</label>
                                 <div class="col-md-8" style="padding-left: 0px">
                                     <table class="table table-bordered">
                                         <tbody><tr>
@@ -115,15 +115,15 @@
                             </div>
                             {/if}
                             <div class="form-inline form-group">
-                                <label for="" class="col-md-3">成本价</label>
+                                <label for="" class="col-md-2">成本价</label>
                                 <span class="">{$goods.cost_price}元</span>
                             </div>
                             <div class="form-inline form-group">
-                                <label for="" class="col-md-3">售价</label>
+                                <label for="" class="col-md-2">售价</label>
                                 <span class="">{$goods.w_price}元</span>
                             </div>
                             <div class="form-inline form-group">
-                                <label for="" class="col-md-3">商品详情</label>
+                                <label for="" class="col-md-2">商品详情</label>
                                 <span class="">{:getImgUrl($goods.detail)}</span>
                             </div>
                         </div>
