--- a/web/application/admin/view/order/index.html
+++ b/web/application/admin/view/order/index.html
@@ -166,32 +166,32 @@
                                 <td style="vertical-align: middle">{:getOrderState($order.state,1)}</td>
                                 <td style="vertical-align: middle">
                                     {if $order.state == 0} <!-- 待核价-->
-                                    <a href="javascript:void" data-id="{$order.id}" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#pricing-modal">核价</a>
-                                    <a href="javascript:void" data-id="{$order.id}" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#cancel-modal">取消订单</a>
+                                    <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#pricing-modal">核价</a>
+                                    <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#cancel-modal">取消订单</a>
                                     {elseif $order.state == 1}<!-- 待签约-->
-                                    <a href="javascript:void" data-id="{$order.id}" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#sign-modal">签约</a>
-                                    <a href="javascript:void" data-id="{$order.id}" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#cancel-modal">取消订单</a>
+                                    <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#sign-modal">签约</a>
+                                    <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#cancel-modal">取消订单</a>
                                     {elseif $order.state == 2}<!-- 待采购商打款-->
-                                    <a href="javascript:void" data-id="{$order.id}" class="btn btn-sm btn-primary" data-tag ="1" data-toggle="modal" data-target="#remittance-modal" >收款</a>
-                                    <a href="javascript:void" data-id="{$order.id}" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#cancel-modal">取消订单</a>
+                                    <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-primary" data-tag ="1" data-toggle="modal" data-target="#remittance-modal" >收款</a>
+                                    <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#cancel-modal">取消订单</a>
                                     {elseif $order.state == 3}<!-- 待发货-->
                                     {elseif $order.state == 4}<!-- 订单关闭-->
                                     {elseif $order.state == 6} <!-- 待收货-->
                                     {if $order.service_type == 1}
-                                    <a href="javascript:void" data-id="{$order.id}" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#cancel-modal">待收货售后</a>
+                                    <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#service-modal">待收货售后</a>
                                     {/if}
                                     {elseif $order.state == 7} <!-- 待质检-->
                                     {elseif $order.state == 8} <!-- 问题确认中-->
-                                    <a href="javascript:void" data-id="{$order.id}" class="btn btn-sm btn-primary"  data-toggle="modal" data-target="#problem-modal">问题解决</a>
+                                    <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-primary"  data-toggle="modal" data-target="#problem-modal">问题解决</a>
                                     {elseif $order.state == 9}<!-- 账期中-->
-                                    <a href="javascript:void" data-id="{$order.id}" class="btn btn-sm btn-primary" data-tag="2" data-toggle="modal" data-target="#remittance-modal">收款</a>
+                                    <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-primary" data-tag="2" data-toggle="modal" data-target="#remittance-modal">收款</a>
                                     {elseif $order.state == 10}<!-- 逾期中-->
-                                    <a href="javascript:void" data-id="{$order.id}" class="btn btn-sm btn-primary" data-tag="3" data-toggle="modal" data-target="#remittance-modal">收款</a>
+                                    <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-primary" data-tag="3" data-toggle="modal" data-target="#remittance-modal">收款</a>
                                     {elseif $order.state == 11}<!-- 转账-->
-                                    <a href="javascript:void" data-id="{$order.id}" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#transfer-modal">转账</a>
+                                    <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#transfer-modal">转账</a>
                                     {elseif $order.state == 12}<!-- 交易完成-->
                                     {if $order.service_type == 1}
-                                    <a href="javascript:void" data-id="{$order.id}" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#cancel-modal">交易售后</a>
+                                    <a href="javascript:void(0)" data-id="{$order.id}" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#cancel-modal">交易售后</a>
                                     {/if}
                                     {/if}
                                 </td>
@@ -421,7 +421,18 @@
         </div>
     </div>
 </div>
-
+<!-- service-->
+<div class="modal fade" id="service-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-body">该订单售后问题是否解决?</div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">否</button>
+                <button type="button" class="btn btn-primary" data-id="" id="service-request">是</button>
+            </div>
+        </div>
+    </div>
+</div>
 {include file="layout/footer" title="$title" keywords="" /}
 <script src="__STATIC__/js/plugins/bootstrap-fileinput/js/fileinput.js" type="text/javascript"></script>
 <script type="text/javascript" src="__STATIC__/js/plugins/bootstrapvalidator/js/bootstrapValidator.js"></script>
@@ -537,6 +548,32 @@
                     }
                 })
             }
+        }
+    });
+    //售后
+    $('#service-modal').on('show.bs.modal', function (event) {
+        var id = $(event.relatedTarget).data('id');
+        $("#service-request").data('id',id);
+    });
+    $("#service-request").click(function () {
+        var id = $(this).data('id');
+        if(id < 0){
+            return;
+        }
+        if (confirm('确认要提交？')) {
+            $.ajax({
+                type: 'post',
+                url: '?s=admin/order/service&id=' + id,
+                data: $('#sign-form').serialize(),
+                dataType: 'json',
+                success: function (data) {
+                    if (data.status == 0) {
+                        window.location.reload();
+                    } else {
+                        alert(data.msg);
+                    }
+                }
+            })
         }
     });
    //收款
