--- a/web/application/admin/view/order/index.html
+++ b/web/application/admin/view/order/index.html
@@ -64,7 +64,7 @@
                             </form>
                         </div>
                         <div class="col-md-2">
-                            <a class="btn btn-primary pull-right"  target="_blank"  href="{:url('admin/order/export')}" >导出</a>
+                            <a class="btn btn-primary pull-right"  target="_blank"  href="{:url('admin/order/export',['state'=>$state,'start'=>$start,'end'=>$end,'k'=>$k])}" >导出</a>
                         </div>
                     </div>
                     <div class="row">
