修改商品详情

--- a/web/application/admin/view/goods/index.html
+++ b/web/application/admin/view/goods/index.html
@@ -76,7 +76,7 @@
                             <tbody>
                             {volist name='list' id='goods'}
                             <tr>
-                                <td><img src="{$goods.icon_path}" width="100px" style="cursor: pointer" /></td>
+                                <td><img src="{$goods.icon_path}"   style="cursor: pointer;max-width: 100px;" /></td>
                                 <td>{$goods.title}</td>
                                 <td>{$goods.supplier_name}</td>
                                 <td>{$goods.sold}</td>
