--- a/web/application/admin/view/goods/preview.html
+++ b/web/application/admin/view/goods/preview.html
@@ -191,8 +191,7 @@
      <img src="{$goods.icon}" /><br />
      {$goods.title}<br />
      价格： {$goods.min_price}-{$goods.max_price} <br />
-
-    {$goods.detail}
+    {:getImgUrl($goods.detail)}
 </div>
 
 </body>
