修改冲突文件

--- a/web/application/admin/view/notice/index.html
+++ b/web/application/admin/view/notice/index.html
@@ -1,6 +1,6 @@
-{include file="layout/header" title="$title" keywords="开源WEB开发框架" /}
+{include file="layout/header" title="$title" keywords="" /}
 <link rel="stylesheet" href="__STATIC__/js/plugins/bootstrapvalidator/css/bootstrapValidator.css"/>
-{include file="layout/left" groupId="$groupId" keywords="开源WEB开发框架" /}
+{include file="layout/left" groupId="$groupId" keywords="" /}
 <div class="content-wrapper">
     <div class="content-header">
         <div class="container-fluid">
@@ -44,12 +44,12 @@
                         <table id="example2" class="table table-bordered table-hover">
                             <thead>
                             <tr>
-                                <th>标题</th>
+                                <th >标题</th>
                                 <th>摘要</th>
                                 <th>操作人</th>
-                                <th>发布时间</th>
-                                <th>状态</th>
-                                <th>操作</th>
+                                <th width="150px">发布时间</th>
+                                <th width="80px">状态</th>
+                                <th width="50px">操作</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -215,7 +215,7 @@
     </div>
 </div>
 
-{include file="layout/footer" title="$title" keywords="开源WEB开发框架" /}
+{include file="layout/footer" title="$title" keywords="" /}
 <script src="__STATIC__/js/plugins/ckeditor-4.8.0/ckeditor.js"></script>
 <script type="text/javascript" src="__STATIC__/js/plugins/bootstrapvalidator/js/bootstrapValidator.js"></script>
 <script type="text/javascript" src="__STATIC__/js/admin/notice.js"></script>
